include(../../common.cmake)
project(icu_i18n)

set(BASE ${CMAKE_SOURCE_DIR}/deps/icu-small/source/i18n)

add_definitions(-DU_I18N_IMPLEMENTATION=1)
include_directories(${BASE})

set(SOURCES
    ${BASE}/affixpatternparser.cpp
    ${BASE}/affixpatternparser.h
    ${BASE}/alphaindex.cpp
    ${BASE}/anytrans.cpp
    ${BASE}/anytrans.h
    ${BASE}/astro.cpp
    ${BASE}/astro.h
    ${BASE}/basictz.cpp
    ${BASE}/bocsu.cpp
    ${BASE}/bocsu.h
    ${BASE}/brktrans.cpp
    ${BASE}/brktrans.h
    ${BASE}/buddhcal.cpp
    ${BASE}/buddhcal.h
    ${BASE}/calendar.cpp
    ${BASE}/casetrn.cpp
    ${BASE}/casetrn.h
    ${BASE}/cecal.cpp
    ${BASE}/cecal.h
    ${BASE}/chnsecal.cpp
    ${BASE}/chnsecal.h
    ${BASE}/choicfmt.cpp
    ${BASE}/coleitr.cpp
    ${BASE}/coll.cpp
    ${BASE}/collation.cpp
    ${BASE}/collation.h
    ${BASE}/collationbuilder.cpp
    ${BASE}/collationbuilder.h
    ${BASE}/collationcompare.cpp
    ${BASE}/collationcompare.h
    ${BASE}/collationdata.cpp
    ${BASE}/collationdata.h
    ${BASE}/collationdatabuilder.cpp
    ${BASE}/collationdatabuilder.h
    ${BASE}/collationdatareader.cpp
    ${BASE}/collationdatareader.h
    ${BASE}/collationdatawriter.cpp
    ${BASE}/collationdatawriter.h
    ${BASE}/collationfastlatin.cpp
    ${BASE}/collationfastlatin.h
    ${BASE}/collationfastlatinbuilder.cpp
    ${BASE}/collationfastlatinbuilder.h
    ${BASE}/collationfcd.cpp
    ${BASE}/collationfcd.h
    ${BASE}/collationiterator.cpp
    ${BASE}/collationiterator.h
    ${BASE}/collationkeys.cpp
    ${BASE}/collationkeys.h
    ${BASE}/collationroot.cpp
    ${BASE}/collationroot.h
    ${BASE}/collationrootelements.cpp
    ${BASE}/collationrootelements.h
    ${BASE}/collationruleparser.cpp
    ${BASE}/collationruleparser.h
    ${BASE}/collationsets.cpp
    ${BASE}/collationsets.h
    ${BASE}/collationsettings.cpp
    ${BASE}/collationsettings.h
    ${BASE}/collationtailoring.cpp
    ${BASE}/collationtailoring.h
    ${BASE}/collationweights.cpp
    ${BASE}/collationweights.h
    ${BASE}/collunsafe.h
    ${BASE}/compactdecimalformat.cpp
    ${BASE}/coptccal.cpp
    ${BASE}/coptccal.h
    ${BASE}/cpdtrans.cpp
    ${BASE}/cpdtrans.h
    ${BASE}/csdetect.cpp
    ${BASE}/csdetect.h
    ${BASE}/csmatch.cpp
    ${BASE}/csmatch.h
    ${BASE}/csr2022.cpp
    ${BASE}/csr2022.h
    ${BASE}/csrecog.cpp
    ${BASE}/csrecog.h
    ${BASE}/csrmbcs.cpp
    ${BASE}/csrmbcs.h
    ${BASE}/csrsbcs.cpp
    ${BASE}/csrsbcs.h
    ${BASE}/csrucode.cpp
    ${BASE}/csrucode.h
    ${BASE}/csrutf8.cpp
    ${BASE}/csrutf8.h
    ${BASE}/curramt.cpp
    ${BASE}/currfmt.cpp
    ${BASE}/currfmt.h
    ${BASE}/currpinf.cpp
    ${BASE}/currunit.cpp
    ${BASE}/dangical.cpp
    ${BASE}/dangical.h
    ${BASE}/datefmt.cpp
    ${BASE}/dayperiodrules.cpp
    ${BASE}/dayperiodrules.h
    ${BASE}/dcfmtimp.h
    ${BASE}/dcfmtsym.cpp
    ${BASE}/decContext.cpp
    ${BASE}/decContext.h
    ${BASE}/decNumber.cpp
    ${BASE}/decNumber.h
    ${BASE}/decNumberLocal.h
    ${BASE}/decfmtst.cpp
    ${BASE}/decfmtst.h
    ${BASE}/decimalformatpattern.cpp
    ${BASE}/decimalformatpattern.h
    ${BASE}/decimalformatpatternimpl.h
    ${BASE}/decimfmt.cpp
    ${BASE}/decimfmtimpl.cpp
    ${BASE}/decimfmtimpl.h
    ${BASE}/digitaffix.cpp
    ${BASE}/digitaffix.h
    ${BASE}/digitaffixesandpadding.cpp
    ${BASE}/digitaffixesandpadding.h
    ${BASE}/digitformatter.cpp
    ${BASE}/digitformatter.h
    ${BASE}/digitgrouping.cpp
    ${BASE}/digitgrouping.h
    ${BASE}/digitinterval.cpp
    ${BASE}/digitinterval.h
    ${BASE}/digitlst.cpp
    ${BASE}/digitlst.h
    ${BASE}/dt_impl.h
    ${BASE}/dtfmtsym.cpp
    ${BASE}/dtitv_impl.h
    ${BASE}/dtitvfmt.cpp
    ${BASE}/dtitvinf.cpp
    ${BASE}/dtptngen.cpp
    ${BASE}/dtptngen_impl.h
    ${BASE}/dtrule.cpp
    ${BASE}/esctrn.cpp
    ${BASE}/esctrn.h
    ${BASE}/ethpccal.cpp
    ${BASE}/ethpccal.h
    ${BASE}/fmtable.cpp
    ${BASE}/fmtable_cnv.cpp
    ${BASE}/fmtableimp.h
    ${BASE}/format.cpp
    ${BASE}/fphdlimp.cpp
    ${BASE}/fphdlimp.h
    ${BASE}/fpositer.cpp
    ${BASE}/funcrepl.cpp
    ${BASE}/funcrepl.h
    ${BASE}/gender.cpp
    ${BASE}/gregocal.cpp
    ${BASE}/gregoimp.cpp
    ${BASE}/gregoimp.h
    ${BASE}/hebrwcal.cpp
    ${BASE}/hebrwcal.h
    ${BASE}/indiancal.cpp
    ${BASE}/indiancal.h
    ${BASE}/inputext.cpp
    ${BASE}/inputext.h
    ${BASE}/islamcal.cpp
    ${BASE}/islamcal.h
    ${BASE}/japancal.cpp
    ${BASE}/japancal.h
    ${BASE}/measfmt.cpp
    ${BASE}/measunit.cpp
    ${BASE}/measure.cpp
    ${BASE}/msgfmt.cpp
    ${BASE}/msgfmt_impl.h
    ${BASE}/name2uni.cpp
    ${BASE}/name2uni.h
    ${BASE}/nfrlist.h
    ${BASE}/nfrs.cpp
    ${BASE}/nfrs.h
    ${BASE}/nfrule.cpp
    ${BASE}/nfrule.h
    ${BASE}/nfsubs.cpp
    ${BASE}/nfsubs.h
    ${BASE}/nortrans.cpp
    ${BASE}/nortrans.h
    ${BASE}/nultrans.cpp
    ${BASE}/nultrans.h
    ${BASE}/numfmt.cpp
    ${BASE}/numsys.cpp
    ${BASE}/numsys_impl.h
    ${BASE}/olsontz.cpp
    ${BASE}/olsontz.h
    ${BASE}/persncal.cpp
    ${BASE}/persncal.h
    ${BASE}/pluralaffix.cpp
    ${BASE}/pluralaffix.h
    ${BASE}/plurfmt.cpp
    ${BASE}/plurrule.cpp
    ${BASE}/plurrule_impl.h
    ${BASE}/precision.cpp
    ${BASE}/precision.h
    ${BASE}/quant.cpp
    ${BASE}/quant.h
    ${BASE}/quantityformatter.cpp
    ${BASE}/quantityformatter.h
    ${BASE}/rbnf.cpp
    ${BASE}/rbt.cpp
    ${BASE}/rbt.h
    ${BASE}/rbt_data.cpp
    ${BASE}/rbt_data.h
    ${BASE}/rbt_pars.cpp
    ${BASE}/rbt_pars.h
    ${BASE}/rbt_rule.cpp
    ${BASE}/rbt_rule.h
    ${BASE}/rbt_set.cpp
    ${BASE}/rbt_set.h
    ${BASE}/rbtz.cpp
    ${BASE}/regexcmp.cpp
    ${BASE}/regexcmp.h
    ${BASE}/regexcst.h
    ${BASE}/regeximp.cpp
    ${BASE}/regeximp.h
    ${BASE}/regexst.cpp
    ${BASE}/regexst.h
    ${BASE}/regextxt.cpp
    ${BASE}/regextxt.h
    ${BASE}/region.cpp
    ${BASE}/region_impl.h
    ${BASE}/reldatefmt.cpp
    ${BASE}/reldtfmt.cpp
    ${BASE}/reldtfmt.h
    ${BASE}/rematch.cpp
    ${BASE}/remtrans.cpp
    ${BASE}/remtrans.h
    ${BASE}/repattrn.cpp
    ${BASE}/rulebasedcollator.cpp
    ${BASE}/scientificnumberformatter.cpp
    ${BASE}/scriptset.cpp
    ${BASE}/scriptset.h
    ${BASE}/search.cpp
    ${BASE}/selfmt.cpp
    ${BASE}/selfmtimpl.h
    ${BASE}/sharedbreakiterator.cpp
    ${BASE}/sharedbreakiterator.h
    ${BASE}/sharedcalendar.h
    ${BASE}/shareddateformatsymbols.h
    ${BASE}/sharednumberformat.h
    ${BASE}/sharedpluralrules.h
    ${BASE}/significantdigitinterval.h
    ${BASE}/simpletz.cpp
    ${BASE}/smallintformatter.cpp
    ${BASE}/smallintformatter.h
    ${BASE}/smpdtfmt.cpp
    ${BASE}/smpdtfst.cpp
    ${BASE}/smpdtfst.h
    ${BASE}/sortkey.cpp
    ${BASE}/standardplural.cpp
    ${BASE}/standardplural.h
    ${BASE}/strmatch.cpp
    ${BASE}/strmatch.h
    ${BASE}/strrepl.cpp
    ${BASE}/strrepl.h
    ${BASE}/stsearch.cpp
    ${BASE}/taiwncal.cpp
    ${BASE}/taiwncal.h
    ${BASE}/timezone.cpp
    ${BASE}/titletrn.cpp
    ${BASE}/titletrn.h
    ${BASE}/tmunit.cpp
    ${BASE}/tmutamt.cpp
    ${BASE}/tmutfmt.cpp
    ${BASE}/tolowtrn.cpp
    ${BASE}/tolowtrn.h
    ${BASE}/toupptrn.cpp
    ${BASE}/toupptrn.h
    ${BASE}/translit.cpp
    ${BASE}/transreg.cpp
    ${BASE}/transreg.h
    ${BASE}/tridpars.cpp
    ${BASE}/tridpars.h
    ${BASE}/tzfmt.cpp
    ${BASE}/tzgnames.cpp
    ${BASE}/tzgnames.h
    ${BASE}/tznames.cpp
    ${BASE}/tznames_impl.cpp
    ${BASE}/tznames_impl.h
    ${BASE}/tzrule.cpp
    ${BASE}/tztrans.cpp
    ${BASE}/ucal.cpp
    ${BASE}/ucln_in.cpp
    ${BASE}/ucln_in.h
    ${BASE}/ucol.cpp
    ${BASE}/ucol_imp.h
    ${BASE}/ucol_res.cpp
    ${BASE}/ucol_sit.cpp
    ${BASE}/ucoleitr.cpp
    ${BASE}/ucsdet.cpp
    ${BASE}/udat.cpp
    ${BASE}/udateintervalformat.cpp
    ${BASE}/udatpg.cpp
    ${BASE}/ufieldpositer.cpp
    ${BASE}/uitercollationiterator.cpp
    ${BASE}/uitercollationiterator.h
    ${BASE}/ulocdata.cpp
    ${BASE}/umsg.cpp
    ${BASE}/umsg_imp.h
    ${BASE}/unesctrn.cpp
    ${BASE}/unesctrn.h
    ${BASE}/uni2name.cpp
    ${BASE}/uni2name.h
    ${BASE}/unum.cpp
    ${BASE}/unumsys.cpp
    ${BASE}/upluralrules.cpp
    ${BASE}/uregex.cpp
    ${BASE}/uregexc.cpp
    ${BASE}/uregion.cpp
    ${BASE}/usearch.cpp
    ${BASE}/uspoof.cpp
    ${BASE}/uspoof_build.cpp
    ${BASE}/uspoof_conf.cpp
    ${BASE}/uspoof_conf.h
    ${BASE}/uspoof_impl.cpp
    ${BASE}/uspoof_impl.h
    ${BASE}/usrchimp.h
    ${BASE}/utf16collationiterator.cpp
    ${BASE}/utf16collationiterator.h
    ${BASE}/utf8collationiterator.cpp
    ${BASE}/utf8collationiterator.h
    ${BASE}/utmscale.cpp
    ${BASE}/utrans.cpp
    ${BASE}/valueformatter.cpp
    ${BASE}/valueformatter.h
    ${BASE}/visibledigits.cpp
    ${BASE}/visibledigits.h
    ${BASE}/vtzone.cpp
    ${BASE}/vzone.cpp
    ${BASE}/vzone.h
    ${BASE}/windtfmt.cpp
    ${BASE}/windtfmt.h
    ${BASE}/winnmfmt.cpp
    ${BASE}/winnmfmt.h
    ${BASE}/wintzimpl.cpp
    ${BASE}/wintzimpl.h
    ${BASE}/zonemeta.cpp
    ${BASE}/zonemeta.h
    ${BASE}/zrule.cpp
    ${BASE}/zrule.h
    ${BASE}/ztrans.cpp
    ${BASE}/ztrans.h)

add_library(icu_i18n ${SHARED} ${SOURCES})
target_include_directories(icu_i18n PUBLIC ${BASE})
target_link_libraries(icu_i18n icu_common)

add_library(icu_i18n_stubdata ${SHARED} ${SOURCES})
target_include_directories(icu_i18n_stubdata PUBLIC ${BASE})
target_link_libraries(icu_i18n_stubdata icu_common_stubdata)
